# canvas-ui-platform

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  config.yaml  release.sh  repository.yaml  run.sh
.github/: copilot-instructions.md
addon/: Dockerfile  config.yaml  run.sh
browser/android/: README.md
browser/linux/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
browser/linux/src/: App.tsx
browser/linux/src-tauri/: Cargo.toml  tauri.conf.json
browser/linux/src-tauri/capabilities/: default.json  remote.json
browser/linux/src-tauri/src/: lib.rs  main.rs
custom_components/canvas_ui_platform/: __init__.py  canvas-ui-platform-panel.js  config_flow.py  manifest.json  strings.json
custom_components/canvas_ui_platform/translations/: en.json
server/: .env.example  package-lock.json  package.json
server/public/: index.html
server/public/assets/: AnalogClockWidget-BG9MJ-po.js  AnalogClockWidget-BJUX5h_N.js  AnalogClockWidget-BJm_rzKc.js  AnalogClockWidget-BLC9M3f4.js  AnalogClockWidget-BLUWG6sQ.js  AnalogClockWidget-BPGWcDzT.js  AnalogClockWidget-BSgveKRS.js  AnalogClockWidget-Bbnwy7BH.js  AnalogClockWidget-Bc_6DMsk.js  AnalogClockWidget-BqxBc-qe.js  AnalogClockWidget-BuRSJ2hc.js  AnalogClockWidget-BwYpdWhk.js  AnalogClockWidget-C2escryN.js  AnalogClockWidget-CH4QmLSA.js  AnalogClockWidget-CWrqqgnM.js  AnalogClockWidget-CoaZiCDN.js  AnalogClockWidget-DBv6DniJ.js  (+923 more)
server/src/: config.ts  index.ts
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+90 files in other folders)
